--- a/src/app/blog/style.css
+++ b/src/app/blog/style.css
@@ -1,4 +1,4 @@
-.single-blog{}
+
 .single-blog .single-blog-content p{
     font-size: 18px;
     line-height: 1.6;
@@ -30,4 +30,34 @@
     object-fit: cover;
     border-radius: 5px;
     margin: 24px 0px;
+}
+
+.single-blog-body h2{
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 24px;
+}
+
+.single-blog-body h3{
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 24px;
+}
+
+.single-blog-body h4{
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 24px;
+}
+
+.single-blog-body h5{
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 24px;
+}
+
+.single-blog-body h6{
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 24px;
 }
