--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,8 +8,6 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -30,18 +28,19 @@ i{
 
 table{
   border-collapse: collapse;
-  border: 1px solid #3f3f3f;
+  border: 1px solid #d3d3d3;
   width: 100%;
+  table-layout: auto;
   margin: 20px 0;
-  font-size: 14px;
+  font-size: 12px;
   min-width: 400px;
+  max-width: 100%;
   border-radius: 5px 5px 0 0;
   overflow: hidden;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.15);
 }
 table thead tr{
   text-align: left;
-  font-weight: bold;
   color: #ffffff;
   background-color: var(--background);
 }
@@ -49,10 +48,11 @@ table thead tr{
 table th,
 table td{
   padding: 10px;
+  font-weight: normal;
 }
 
 table tbody tr{
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #d3d3d3;
 }
 
 
