--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,17 @@
 @import "tailwindcss";
 
+@layer utilities {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+    }
+}
+
 :root {
   --background: #008648;
   --foreground: #171717;
